--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Mini_test_moblie"
         tools:targetApi="31">
         <activity
+            android:name=".newActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Calc2Activity"
+            android:exported="false" />
+        <activity
             android:name=".CalcActivity"
             android:exported="false" />
         <activity
