--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,11 @@
         android:theme="@style/Theme._2021158008_com"
         tools:targetApi="31">
         <activity
-            android:name=".Calc1Activity"
+            android:name=".NewActivity"
+            android:parentActivityName=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CalcActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
